[workspace]
resolver = "2"
members = ["sys"]

[workspace.package]
version = "0.0.0-alpha"
edition = "2021"
authors = ["quratoop <quratoop@gmail.com>"]
license = "Apache-2.0"
publish = true
keywords = ["alloc", "std", "efficent"]
homepage = "https://github.com/quratoop/yesallocator"
repository = "https://github.com/quratoop/yesallocator"
rustc-version = "1.83"

[package]
name = "yesallocator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
rustc-version.workspace = true

[dependencies]
libc = { version = "0.2.167", features = ["align", "std", "const-extern-fn", "extra_traits"] }
yesallocator-sys = { version = "0.0.0-alpha", path = "sys" }
