[package]
build = "build.rs"
name = "yesallocator-sys"
description = "yesallocator connection to the c backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
rustc-version.workspace = true

[dependencies]
libc = { version = "0.2.167", features = ["align", "std", "const-extern-fn", "extra_traits"] }

[build-dependencies]
cc = "1.2.2"
which = "7.0.0"
